cmake_minimum_required(VERSION 2.6)
project(common_misc_data_btf)
IF (DEFINED ENV{CHAOS_BUNDLE} )
  include($ENV{CHAOS_BUNDLE}/tools/project_template/CMakeChaos.txt)
ELSE()
  MESSAGE(STATUS "STANDALONE, environment CHAOS_BUNDLE defined")
  IF (NOT CMAKE_INSTALL_PREFIX) 
    MESSAGE(fatal "you must add -DCMAKE_INSTALL_PREFIX=<dir>")
  ELSE()
    MESSAGE(STATUS "install prefix ${CMAKE_INSTALL_PREFIX}")
  ENDIF()
  INCLUDE_DIRECTORIES(. ../..)
  LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/build ${CMAKE_INSTALL_PREFIX}/lib)
ENDIF()


ADD_DEFINITIONS( -fno-rtti -fno-exceptions)
SET(src dump_btf_data.cpp )

IF(FrameworkLib)
SET(libs  ${FrameworkLib})
ELSE()
SET(libs pthread)
ENDIF()

ADD_EXECUTABLE(dump_btf_data ${src})
TARGET_LINK_LIBRARIES(dump_btf_data memcached m)
#FILE(GLOB headers "core/*.h")
#INSTALL(FILES ${headers} DESTINATION include/common/core/debug)
INSTALL_TARGETS(/bin dump_btf_data)
